@@ -31,6 +31,7 @@ $t->get_ok('/')
   ->header_like('Content-Security-Policy', qr!nonce-!)
   ->content_like(qr/<script nonce/)
   ->content_like(qr/document\.body\.classList\.remove\(\'no-js\'\);/)
+  ->header_is('X-Content-Type-Options', 'nosniff')
   ;
 
 # Test additions
